after fixing overflow evening

--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@ body{
 a{
     text-decoration: none;
 }
-p,h1,h6,h3{
+ul{
+    padding: 0px;
+}
+p,h1,h3,h6{
     margin: 0px;
 }
 .main-container{
@@ -21,7 +24,6 @@ p,h1,h6,h3{
     margin: auto;
 }
 .container{
-    min-width: max-content;
     max-width: 100%;
     padding: 30px 50px;
 }
@@ -133,11 +135,17 @@ p,h1,h6,h3{
 .fw-5{
     font-weight: 500;
 }
+.text-center{
+    text-align: center;
+}
 .font-small{
     font-size: 14px;
 }
 .max-content{
     max-width: 350px;
+}
+.max-h1{
+    max-width: 442px;
 }
 .navbar {
     color: white;
@@ -164,9 +172,7 @@ p,h1,h6,h3{
     padding: 0px;
 }
 .secondpage-img {
-    max-width: 508px;
-    max-height: 552px;
-    padding-top: 40px;
+    max-width: 100%;
 }
 .secondpage-content{
     max-width: 381px;
@@ -210,6 +216,22 @@ p,h1,h6,h3{
     color: #737373;
 
 }
+.practice-advice{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.practice-advice-p{
+    color: white;
+    align-self: center;
+    text-align: center;
+}
+.practice-advice-h2{
+    color: white;
+    align-self: center;
+    text-align: center;
+}
 .products{
     display: grid;
     grid-template-columns: auto auto auto;
@@ -221,7 +243,7 @@ p,h1,h6,h3{
     min-width: 100%;
 }
 .product-details{
-    width: 348px;
+    width: 100%;
     padding: 25px, 25px, 35px, 25px;
 }
 .sale-icon{
@@ -247,7 +269,6 @@ p,h1,h6,h3{
     align-items: center;
     position: absolute;
 }
-
 .product-price{
     margin-top: 10px; 
     color: #BDBDBD;
@@ -334,7 +355,7 @@ p,h1,h6,h3{
     align-items: center;
 }
 .cards{
-    min-width: 323px;
+    min-width: 328px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -445,7 +466,7 @@ p,h1,h6,h3{
 }
 
 .card-tick-icon{
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     border-radius: 50%;
     background-color: #2DC071;
@@ -464,6 +485,8 @@ p,h1,h6,h3{
     display: flex;
     max-width: 243px;
     align-content: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
     align-self: center;
     align-items: center;
     padding-top: 5px;
@@ -484,7 +507,7 @@ p,h1,h6,h3{
     padding-left: 10px;
 }
 .card-grey-tick-icon{
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     border-radius: 50%;
     background-color: #BDBDBD;
@@ -501,7 +524,7 @@ p,h1,h6,h3{
     font-weight: lighter;
 }
 .new-offer-card{
-    min-width: 323px;
+    min-width: 328px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -538,13 +561,12 @@ p,h1,h6,h3{
     justify-content: center;
     justify-content: space-around;
     grid-template-columns: auto auto auto;
-    padding: 160px 0px 160px 0px;
+    padding: 160px 0px;
     align-items: center;
 }
 .fifthpage-card-items{
     background-color: white;
-    width: 348px;
-    height: 318px;
+    width: 100%;
     padding: 25px;
     display: flex;
     flex-direction: column;
@@ -570,6 +592,7 @@ p,h1,h6,h3{
     height: 50px;
     align-self: center;
     display: flex;
+    align-items: center;
 }
 .designer-badge img{
     width: 50px;
@@ -584,11 +607,16 @@ p,h1,h6,h3{
     font-weight: 700;
 }
 .designer-details p{
+    align-self: center;
     color:#252B42;
     font-size: 12px;
     font-weight: 500;
 }
 .lastpage-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     align-self: center;
 }
 .lastpage-content h6{
@@ -614,7 +642,7 @@ p,h1,h6,h3{
     align-self: center;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .subscribe-option input{
     border: none;
@@ -625,8 +653,7 @@ p,h1,h6,h3{
     border-radius: 5px 0px 0px 5px;
 }
 .subscribe-option button{
-    max-width: 100%;
-    padding-left: 0px;
+    min-width: 117px;
     background-color: #1BA0AB;
     border: none;
     border-radius: 0px 5px 5px 0px;
@@ -657,6 +684,7 @@ p,h1,h6,h3{
     font-weight: 700;
     text-decoration: none;
     max-width: 256px;
+    text-overflow: ellipsis;
     padding-bottom:15px;
 }
 .contact{
@@ -689,6 +717,8 @@ p,h1,h6,h3{
 }
 .hamburger{
     display: none;
+    width: 25px;
+    height: 25px;
 }
 /* hamburger menu */
 .hamburger::before,
@@ -697,31 +727,44 @@ p,h1,h6,h3{
     flex-direction: column;
     display: flex;
     content: "";
-    width: 35px;
+    width: 25px;
     height: 5px;
     background-color: white;
     border-radius: 1000px;
+    transform-origin: left center;
 }
 .hamburger input:checked{
-    background-color: red;
+    width: 0;
+    opacity: 0;
 }
 .hamburger input{
     appearance: none;
     margin-left: 0;
     padding: 0;
 }
+.hamburger:has(input:checked)::before{
+    rotate: 40deg;
+    width: 25px;
+}
+.hamburger:has(input:checked)::after{
+    rotate: -42deg;
+    width: 25px;
+}
 .page-description{
     width: max-content;
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (max-width: 600px) {
     .container{
         padding: 5px 10px;
     }
     .navbar{
         position: initial;
-        padding: 0px 10px;
+        padding: 0px 0px;
         background-color: #26335D;
+    }
+    .login{
+        display: none;
     }
     .images{
         display: none;
@@ -729,8 +772,11 @@ p,h1,h6,h3{
     .banner-info{
         align-items: center;
     }
+    .banner-heading{
+        text-align: center;
+    }
     .join-us-btn{
-        margin-left: 20px;
+        margin-left: 10px;
     }
     .hamburger{
         display: block;
@@ -743,7 +789,10 @@ p,h1,h6,h3{
         align-self: center;
     }
     .page-description p{
+        max-width: 300px;
         text-align: center;
+    }.page-description h2{
+        max-width: 400px;
     }
     .nav-items{
         display: none;
@@ -761,7 +810,7 @@ p,h1,h6,h3{
         gap: 25px;
     }
     .dept-info{
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
     }
     .footer-content{
